@@ -1,3 +1,7 @@
+2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Manager.cs: Remove some dead code.
+
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* Manager.cs: Fix eol-style.
